argocd/linkwarden/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: linkwarden
spec:
  endpointSelector:
    matchLabels:
      app: linkwarden
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: linkwarden
            app: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: linkwarden-db
spec:
  endpointSelector:
    matchLabels:
      app: postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: linkwarden
            app: linkwarden
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  egressDeny:
    - toEntities:
        - world
